--- a/style_start.css
+++ b/style_start.css
@@ -1,13 +1,51 @@
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    color:white;
+  }
 .global{
     object-fit: fill;
+    background-color: black;
+
 }
 .container{
     display:grid;
-    /* grid-template-rows: 25% 25% 25% 25%; */
     grid-template-columns: 60% 40%;
+    /* grid-template-rows:5rem 100rem; */
     /* flex-wrap: wrap; */
     /* padding-right: 5%; */
     /* padding-left: 5%; */
+}
+.service-hero-subtitle {
+    /* font-size: 1.65vw; */
+    font-size: 21px;
+    line-height: 26px;
+  }
+  .service-hero-title {
+    line-height: 1;
+    font-family: Aeonikpro;
+  }
+h1{
+    color: white;
+    letter-spacing: -1px;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-family: Aeonikpro, sans-serif;
+    font-size: 70px;
+    font-weight: 400;
+}
+.home-work__card-img-wrap {
+    display: flex;
+    height: auto;
+}
+
+    img {
+        max-width: 100%;
+        display: inline-block;
+    }
+
+a {
+background-color: rgba(0, 0, 0, 0);
 }
 div.sticky{
     /* display:flex; */
@@ -30,4 +68,153 @@ div.sticky{
     /* flex-grow: 1;
     flex-wrap: wrap; */
     max-width: 40%;
+}
+.service-content-wrap {
+    flex-direction: column;
+    flex: 1;
+    padding-top: 50vh;
+    padding-bottom: 15vh;
+    padding-left: 32px;
+    display: flex
+;
+}
+element.style {
+    background-color: rgba(0, 0, 0, 0);
+}
+/* @media only screen and (min-device-width: 992px) {
+    #navbar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        transform: translate3d(0, 0, 0);
+        transition: transform .5sease-in-out;
+    }
+} */
+html.w-mod-touch * {
+    background-attachment: scroll !important;
+}
+.transition {
+    z-index: 0;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    display: none;
+    position: fixed;
+    top: 0%;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
+}
+* {
+    box-sizing: border-box;
+}
+div {
+    /* display: block; */
+    unicode-bidi: isolate;
+}
+.menu__cta-contact {
+    z-index: 100;
+    border: 1px solid white;
+    background-color: yellowgreen;
+    color: black;
+    border-radius: 100px;
+    justify-content: center;
+    align-items: center;
+    width: 112px;
+    height: 32px;
+    padding-left: 16px;
+    padding-right: 16px;
+    font-family: Aeonikpro, sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1;
+    display: flex;
+    position: fixed;
+    top: 22px;
+    right: 90px;
+    overflow: hidden;
+}
+.btn-back-wrapper {
+    z-index: 110;
+    justify-content: center;
+    align-items: center;
+    display: flex
+;
+    position: fixed;
+    top: 22px;
+    bottom: auto;
+    left: 45%;
+    right: auto;
+}
+.btn-back-wrapper.all-services {
+    left: 92px;
+}
+.menu-dropdown-wrapper {
+    z-index: 99;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    position: fixed;
+    top: 0%;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
+}
+.page-transition {
+    width: 100vw;
+    height: 100vh;
+    display: none;
+}
+.transition {
+    z-index: 0;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    display: none;
+    position: fixed;
+    top: 0%;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
+}
+body .transition {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.logo-menu {
+    max-width: 100%;
+    display: inline-block;
+}
+.menu__icon-nav-wrap {
+    z-index: 100;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    display: flex
+;
+    position: relative;
+}
+.menu__logo, .menu__logo.w--current {
+    align-items: center;
+    display: flex
+;
+    overflow: hidden;
+}
+.w-inline-block {
+    max-width: 100%;
+    display: inline-block;
+}
+.menu__burger-btn {
+    justify-content: center;
+    align-items: center;
+    display: flex
+;
+    position: relative;
 }
